Simple continuation test